# WebChat

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  logger.py  pyproject.toml
backend/: agent.py  config.py  ingestion.py  main.py  retriever.py  scraper.py
frontend/: app.py
